--- a/cub3D/Makefile
+++ b/cub3D/Makefile
@@ -6,12 +6,12 @@
 #    By: mabdelba <mabdelba@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/07/25 18:34:18 by mabdelba          #+#    #+#              #
-#    Updated: 2023/01/09 19:07:51 by mabdelba         ###   ########.fr        #
+#    Updated: 2023/01/12 01:46:58 by mabdelba         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 SRC = main.c get_next_line.c get_next_line_utils.c parsing.c parsing_utils.c \
-		check_map.c
+		check_map.c convert_color.c
 		
 
 OBJ = $(SRC:.c=.o)
@@ -24,7 +24,6 @@ CC = gcc
 LIBFT = libft/libft.a
 
 all : $(LIBFT) $(NAME)
-
 
 
 %.o: %.c cub.h libft/libft.h
